--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "git": "^0.1.5",
     "morgan": "^1.10.0",
     "vercel": "^20.1.4"
   },
